# aws-rust-poc

./: .env.dist  .env.json.dist  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  samconfig-prod.toml  samconfig-staging.toml  samconfig.toml  template.yaml
.docker/: setup.sql.template
