[package]
name = "aws-rust-poc"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[[bin]]
name = "ping"

[dependencies]
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
#aws-smithy-http = "0.52.0"
#aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
#http = "0.2.8"
